[gd_scene load_steps=6 format=3 uid="uid://co3lp6ftwcm8x"]

[ext_resource type="Script" path="res://1_scenes/6_ui/2_screens/level_completed_screen.gd" id="1_3k37g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e6eww"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c7m5o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3fkq0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_piafr"]

[node name="LevelCompletedScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_3k37g")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -250.0
offset_right = 450.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(650, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -32.0
offset_right = 245.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 80
text = "Level completed!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CompletionTime" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 48
text = "Finished in: 0:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Multiplier" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 48
text = "Score multiplier: x1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 48
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ContinueButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.807843, 0.658824, 0.890196, 1)
theme_override_colors/font_pressed_color = Color(0.857578, 0.742602, 0.920312, 1)
theme_override_colors/font_focus_color = Color(0.6, 0.368627, 0.713726, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_e6eww")
theme_override_styles/hover = SubResource("StyleBoxEmpty_c7m5o")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3fkq0")
theme_override_styles/normal = SubResource("StyleBoxEmpty_piafr")
text = "Continue to next level"

[connection signal="pressed" from="Panel/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
